# Salesforce-Apex-Forge

./: .cline-provider.json  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FINAL_TEST_RESULTS.md  MEMORY_AGENT_README.md  MEMORY_API_REFERENCE.md  MEMORY_ARCHITECTURE.md  MEMORY_EXAMPLES.py  MEMORY_IMPLEMENTATION_GUIDE.md  PROJECT_AGENT_ANALYSIS.md  README.md  REWARD_LEARNING_ENGINE.md  TODO.md  TOOLS_ARCHITECTURE_ANALYSIS.md  TOOLS_GAPS_AND_PRIORITIES.md  TOOLS_QUICK_REFERENCE.md  TOOL_LAYER_API_REFERENCE.md  TOOL_LAYER_ARCHITECTURE_DIAGRAMS.md  TOOL_LAYER_EXAMPLES.py  TOOL_LAYER_GUIDE.md  TOOL_LAYER_IMPLEMENTATION_GUIDE.md  TOOL_LAYER_README.md  TOOL_LAYER_SUMMARY.md  WORKFLOW_API_REFERENCE.md  WORKFLOW_ENGINE_README.md  copilot-instructions.md  memory.db  pyproject.toml  requirements.txt  test_fixes_phase1.txt  test_output.txt  test_perf.txt
.github/workflows/: ci.yml
config/: settings.example.toml  settings.yaml
nvidia-nim-chat/: .env.example  QUICKSTART.md  README.md  __init__.py  agent.py  config.yaml  debug_api.py  debug_client.py  final_test.py  simple_test.py  test_live.py  test_no_system.py
nvidia-nim-chat/src/: __init__.py  agent.py  chat.py  client.py  prompts.py  tools.py
nvidia-nim-chat/tests/: __init__.py  test_client.py
scripts/: list_models.py
src/salesforce_ai_engineer/: __init__.py
state/: state.json
tests/agent/: test_artifact_paths.py  test_orchestrator.py  test_planner.py  test_registry.py
tests/api/: test_api_endpoints.py
tests/config/: __init__.py  test_configuration_manager.py
tests/core/: __init__.py  (+4 more)
(+145 files in other folders)
