[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-salesforce-ai-engineer"
version = "0.1.0"
description = "Local-first autonomous Salesforce AI Engineer scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ollama>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.2",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
sf-ai-engineer = "salesforce_ai_engineer.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "ignore:cannot collect test class 'TestSummary':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestResult':pytest.PytestCollectionWarning",
]
